# pavex_static_files

./: Cargo.toml  License.txt  README.md
src/: config.rs  errors.rs  lib.rs  static_files.rs  static_server.rs
tests/: static_files.rs  static_server.rs
