[package]
name = "pavex_static_files"
version = "0.6.0"
edition = "2024"
description = "A file server, meant to be used with Pavex, for serving static files"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeff-mitchell.dev>"]
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
